# pseudocron

./: .gitignore  CMakeLists.txt  Erorrs_Cmake  README.md
pseudocron_daemon/: CMakeLists.txt  main.cxx  task.cxx  task.hxx
pseudocron_tests/: CMakeLists.txt  main.cxx  task_tests.cxx
